--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 </select>
             </div>
             <button type="submit">Konversi</button>
+            <button type="button" id="reset-button">Reset</button>
+            <button type="button" id="reverse-button">Balikkan</button>
         </form>
         <div id="hasil-konversi">
             <p>Hasil konversi:</p>
